Bug 219268 - Formatting multiple people in album artists doesn't work
Summary: Formatting multiple people in album artists doesn't work
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.1
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-19 03:58 UTC by Robby Stephenson
Modified: 2009-12-19 04:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2009-12-19 03:58:50 UTC
Version:           2.1.1 (using KDE 4.3.4)
Installed from:    openSUSE RPMs

User report:

Entering "The Sex Pistols;The EX-Pistols" for an album artist with auto-formatting should show grouped as "Sex Pistols, The" and "EX-Pistols, The".

What happens is that he first group is shown as "Sex Pistols" only and the second is shown as "The EX-Pistols, The"
Comment 1 Robby Stephenson 2009-12-19 04:01:02 UTC
SVN commit 1063676 by rstephenson:

Fix formatting with multiple people with titles. 

Also make some functionss in FieldFormat private to ensure they aren't called
when they shouldn't be.

BUG: 219268



 M  +1 -0      ChangeLog  
 M  +42 -20    src/entry.cpp  
 M  +64 -78    src/fieldformat.cpp  
 M  +31 -22    src/fieldformat.h  
 M  +43 -0     src/tests/collectiontest.cpp  
 M  +2 -0      src/tests/collectiontest.h  
 M  +0 -2      src/tests/formattest.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1063676