Fix formatting with multiple people with titles.

Also make some functionss in FieldFormat private to ensure they aren't called
when they shouldn't be.

BUG: 219268


svn path=/trunk/extragear/office/tellico/; revision=1063676